# epi-registry

backend/: pyproject.toml
backend/src/: bootstrap.py  router.py  settings.py
backend/src/apps/asm/: json_repository.py  router.py  schemas.py  service.py
backend/src/data/: drugs.json  modifier_rules.json  modifiers.json  seizure_drug_map.json  seizure_types.json
backend/tests/unit/: test_asm_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Layout.jsx  main.jsx
frontend/src/api/client/: APIClient.js
frontend/src/api/mutations/: useASMSelection.js
frontend/src/api/queries/: useModifiers.js  useSeizureTypes.js
frontend/src/api/services/: ASMService.js
frontend/src/components/: ASMSelectionForm.jsx  Header.jsx  SelectionResult.jsx
